# healthcare-data-projects

healthcare-data-insight/: healthcare-data-insights.ipynb  pyproject.toml
python-medical-analysis/: exploratory_data_analysis_101.ipynb  main.py  pyproject.toml
python-medical-analysis/data/: medical_records.csv
sdtm-mapper-streamlit/: README.md  main.py  pyproject.toml
sdtm-mapper-streamlit/data/: default_metadata.csv  sdtm-3-1-2.csv
sdtm-mapper-streamlit/metadata/: default_metadata.csv
